# python_rpc_demo

./: README.md  pyproject.toml
src/python_rpc_demo/: client.py  server.py
