[project]
name = "python-rpc-demo"
version = "0.1.0"
description = ""
authors = [
    {name = "Ganesh Chandrasekaran",email = "gchandra@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "python_rpc_demo", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
